fix always display toprow on mobile

--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -33,7 +33,8 @@
 
 @media (max-width: 640.98px) ***REMOVED***
     .top-row:not(.auth) ***REMOVED***
-        display: none;
+        display: normal;
+        
 ***REMOVED***
 
     .top-row.auth ***REMOVED***
